--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   lite_rolling_switch: ^1.0.0
+  flutter_switch: ^0.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
